--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2063,6 +2063,23 @@ topologies:
             image: base-ceos-training-l5-cl-2023-2-4301-20240516
             eos:
               - 4.30.1F
+          2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 20
+              ram: 40
+              disk: 50
+              image: dual-topo-training-level-5-cl-eos
+            resources_cvp:
+              cpu: 48
+              ram: 70
+              disk: 100
+              image: dual-topo-training-level-5-cl-cvp
+            branch: nested/2023.2-dual
+            image: dual-topo-training-level-5-cl-eos
+            orderable: true
+            eos:
+              - 4.30.1F               
     prod:
       ceos:
         cpu: 60
@@ -2078,6 +2095,23 @@ topologies:
             image: base-ceos-training-l5-cl-2023-2-4301-20240516
             eos:
               - 4.30.1F       
+          2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 48
+              ram: 110
+              disk: 50
+              image: dual-topo-training-level-5-cl-eos
+            resources_cvp:
+              cpu: 48
+              ram: 110
+              disk: 100
+              image: dual-topo-training-level-5-cl-cvp
+            branch: v2023.2-dual-0115024
+            image: dual-topo-training-level-5-cl-eos
+            orderable: false
+            eos:
+              - 4.30.1F    
     desc: 'Training Level - 5 (NEW)'
     name: 'Training Level - 5'
     title: 'Training Level - 5'
