--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2568,6 +2568,7 @@ topologies:
               cpu: 48
               ram: 110
             branch: nested/2023.2
+            orderable: true
             image: base-ceos-training-lx-cl-2023-2-4301-20240528
             eos:
               - 4.30.1F
