--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -2572,6 +2572,16 @@ topologies:
             image: base-ceos-training-lx-cl-2023-2-4301-20240528
             eos:
               - 4.30.1F
+          2024.1.2:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: base-ceos-training-lx-cl-2024-1-4301-20240531
+            eos:
+              - 4.30.1F
     prod:
       veos:
         cpu: 60
